<resources>
    <string name="app_name">myapp</string>
    <string name="action_menu_search">搜索</string>
    <string name="action_menu_add">添加</string>
    <string name="action_menu_del">删除</string>
    <string name="near_by">附近</string>
    <string name="rotate">轨迹</string>
    <string name="nav">导航</string>
    <string name="mine">我的</string>
    <string name="IDS_OTHER_00171">立即删除</string>
    <string name="IDS_OTHER_00172">立即清理</string>
    <string name="IDS_OTHER_00016">注销当前帐号</string>
    <string name="IDS_OTHER_00026">消息推送</string>
    <string name="IDS_OTHER_00024">声音提示</string>
    <string name="IDS_OTHER_00025">震动提示</string>
    <string name="IDS_PHOTO_0002">聊天记录漫游</string>
    <string name="IDS_OTHER_00156">清空已下载的文档</string>
    <string name="IDS_OTHER_00157">清除全部沟通记录</string>
    <string name="IDS_OTHER_00158">注销后，您将接收不到离线消息。</string>
    <string name="IDS_OTHER_00031">语言选择</string>
    <string name="IDS_OTHER_00032">软件升级</string>
    <string name="IDS_OTHER_00033">高级设置</string>
    <string name="IDS_OTHER_00203">帮助</string>
    <string name="IDS_OTHER_00125">新版本</string>
    <string name="IDS_OTHER_00176">意见反馈</string>
    <string name="IDS_OTHER_00200">产品动态</string>
    <string name="IDS_ENC_0068">推荐朋友使用</string>
    <string name="IDS_ENC_0084">new</string>
    <string name="IDS_OTHER_00007">关于</string>
    <string name="IDS_CONTACTS_0010">退出</string>
    <string name="IDS_JUIBASE_00005">返回</string>
    <string name="IDS_LOGIN_00005">登 录</string>
    <string name="IDS_LOGIN_00024">免费注册</string>
    <string name="IDS_PHOTO_0010">找回密码</string>
    <string name="IDS_LOGIN_00002">帐号</string>
    <string name="IDS_LOGIN_00003">密码</string>
    <string name="about_part1">"Data © NavInfo &amp; CenNavi &amp; MapKing &amp; 樂客
        LocalKing &amp; 道道通 &amp; 西南风"</string>
    <string name="about_part2">Image © DigitalGlobe &amp; Chinasiwei &amp; HERE</string>
    <string name="about_right_reserved">© 2015 baidu.com, all rights reserved</string>
    <string name="accept">接受</string>
    <string name="accept_prize">领奖咯!</string>
    <string name="accept_prize_failture">领奖失败啦亲，请重试一下吧</string>
    <string name="activity_is_ended">敬请期待第二期挖宝活动!</string>
    <string name="activity_name">活动名称</string>
    <string name="activity_partner">活动参与人</string>
    <string name="add">新增</string>
    <string name="add_fri">选择好友</string>
    <string name="are_you_stay_map">您是否要留在百度地图？</string>
    <string name="autologin_expired_tip">自动登录已到期，确认重新登录，取消关闭提示。</string>
    <string name="avepay_input_hint">点击输入</string>
    <string name="avepay_title">人均消费:</string>
    <string name="back">返回</string>
    <string name="back_to_app">返回应用</string>
    <string name="banner_movie_cinema">以下影院正在上映该片：</string>
    <string name="banner_movie_to_detail">查看更多热映影片</string>
    <string name="bd_wallet_account_balance">账户余额</string>
    <string name="bd_wallet_add_new_card">+ 添加银行卡</string>
    <string name="bd_wallet_auth_rightnow">立即认证</string>
    <string name="bd_wallet_auth_tip">为了您的支付顺畅，请认证银行卡信息</string>
    <string name="bd_wallet_back">返回</string>
    <string name="bd_wallet_balance">钱包余额</string>
    <string name="bd_wallet_balance_charge">余额充值</string>
    <string name="bd_wallet_balance_charge_account">充值金额</string>
    <string name="bd_wallet_balance_charge_account_tips">请输入充值金额</string>
    <string name="bd_wallet_balance_charge_tips">充值后，您可方便快捷的使用余额支付，百度钱包保障你的使用安全，请放心填写</string>
    <string name="bd_wallet_balance_freeze_account_tips">仅用于支付，不可提现余额%1$s元</string>
    <string name="bd_wallet_balance_goto_charge">立即充值</string>
    <string name="bd_wallet_balance_pwd_setting_tip">为保障您的余额支付安全，请先设置手机支付密码</string>
    <string name="bd_wallet_balance_pwd_setting_tip2">为了您的账户安全，请设置手机支付密码</string>
    <string name="bd_wallet_balance_setting_rightnow">立即设置</string>
    <string name="bd_wallet_balance_tip">在这里开启余额支付哦</string>
    <string name="bd_wallet_balance_virtual_amount_dialog_tips">由于该笔金额来自充值卡充值或参与活动获得，仅支持话费充值、购买彩票等消费，暂不支持提现，请谅解。</string>
    <string name="bd_wallet_balance_virtual_amount_dialog_title">您有%1$s元不能提现</string>
    <string name="bd_wallet_cancel_bind">解除绑定</string>
    <string name="bd_wallet_cancel_bind_tip">确定解除绑定当前银行卡？</string>
    <string name="bd_wallet_cancel_bind_title">解绑银行卡</string>
    <string name="bd_wallet_check_balance">查看钱包余额</string>
    <string name="bd_wallet_close_trans">关闭交易</string>
    <string name="bd_wallet_close_trans_fail">关闭交易失败，请稍后重试</string>
    <string name="bd_wallet_close_trans_success">关闭交易成功</string>
    <string name="bd_wallet_confirm_colose_trans">确认关闭交易？</string>
    <string name="bd_wallet_confirm_pay">确认付款</string>
    <string name="bd_wallet_credit">信用卡</string>
    <string name="bd_wallet_day_quota">当日限额%1$s元</string>
    <string name="bd_wallet_debit">储蓄卡</string>
    <string name="bd_wallet_disabled">未启用</string>
    <string name="bd_wallet_downloading">下载中</string>
    <string name="bd_wallet_enabled">已启用</string>
    <string name="bd_wallet_fail_tips">升级失败</string>
    <string name="bd_wallet_fee">%1$s服务费</string>
    <string name="bd_wallet_fetch_cash_to_bankcard">提现到银行卡</string>
    <string name="bd_wallet_forget_phone_pwd">忘记手机支付密码</string>
    <string name="bd_wallet_gathering_failed">收款失败！</string>
    <string name="bd_wallet_gathering_success">成功收款%1$s元！</string>
    <string name="bd_wallet_get_pwd_info_error">获取支付密码相关信息失败</string>
    <string name="bd_wallet_how_much_can_withdraw">可提现%1$s元</string>
    <string name="bd_wallet_how_much_withdraw_tip">提现金额</string>
    <string name="bd_wallet_install">安装中</string>
    <string name="bd_wallet_install_complete">安装成功，返回首页重新打开吧 ($s$)</string>
    <string name="bd_wallet_kefu">客服电话： %1$s</string>
    <string name="bd_wallet_load_complete_tips">安装成功，下次打开可享受最新体验~快试试吧！</string>
    <string name="bd_wallet_load_error">加载数据失败，点击重新加载</string>
    <string name="bd_wallet_load_fail">加载失败，请退出我的钱包重试</string>
    <string name="bd_wallet_load_fail_tips">安装失败，下次再试~</string>
    <string name="bd_wallet_login_now">立即登录</string>
    <string name="bd_wallet_modify_phone_pwd">修改手机支付密码</string>
    <string name="bd_wallet_money_transfer">转账</string>
    <string name="bd_wallet_next_update_tips">下次提醒</string>
    <string name="bd_wallet_nfc_delete_card">您确定要删除这张卡片吗?</string>
    <string name="bd_wallet_nfc_empty_cards">还未添加卡片哦!</string>
    <string name="bd_wallet_no_data">暂无记录</string>
    <string name="bd_wallet_no_more">没有更多啦…</string>
    <string name="bd_wallet_no_record">暂无交易记录</string>
    <string name="bd_wallet_non_update_home_index_btn">暂不升级</string>
    <string name="bd_wallet_non_wifi_info">(提示：非wifi环境)</string>
    <string name="bd_wallet_not_login">"登录我的钱包，查看交易记录
        百度钱包，保障您的交易信息安全"</string>
    <string name="bd_wallet_own_parent_banks">所属银行</string>
    <string name="bd_wallet_pay_handling">银行处理中</string>
    <string name="bd_wallet_pay_security">支付安全</string>
    <string name="bd_wallet_pay_security_desp_1">为您提供完善的支付安全技术保障</string>
    <string name="bd_wallet_pay_security_desp_2">手机支付密码，加强您的资金账户安全</string>
    <string name="bd_wallet_pay_security_pp">隐私安全保护</string>
    <string name="bd_wallet_pay_security_pp_tip">开启后/已开启，查看账户余额，我的交易时须先验证手机支付密码，首页资产数目将隐藏。</string>
    <string name="bd_wallet_pay_security_pp_tip1">开启后/已开启，查看账户余额，我的交易时须先验证手机支付密码。</string>
    <string name="bd_wallet_pay_security_prompt_set">立即设置</string>
    <string name="bd_wallet_pay_security_protection">支付安全防护</string>
    <string name="bd_wallet_pay_security_protection_install">立即下载安装</string>
    <string name="bd_wallet_pay_security_protection_message_install">百度手机卫士将为您提供24小时支付安全防护，保障手机支付无忧</string>
    <string name="bd_wallet_pay_security_protection_message_update">为了全面保护手机安全，请马上升级百度手机卫士</string>
    <string name="bd_wallet_pay_security_protection_update">立即下载升级</string>
    <string name="bd_wallet_pay_security_services_tip">百度钱包客服竭诚为您服务：</string>
    <string name="bd_wallet_pay_security_set_fail">设置失败</string>
    <string name="bd_wallet_pay_security_set_pay_pwd_tip">您尚未设置手机支付密码，请设置后开启隐私安全保护</string>
    <string name="bd_wallet_pay_security_set_success">设置成功</string>
    <string name="bd_wallet_pay_security_tip">安全提示</string>
    <string name="bd_wallet_pay_security_title">百度钱包 安全支付</string>
    <string name="bd_wallet_pay_securtiy_faq">常见问题</string>
    <string name="bd_wallet_pay_success">付款成功</string>
    <string name="bd_wallet_payway">支付方式</string>
    <string name="bd_wallet_phone_pwd">手机支付密码</string>
    <string name="bd_wallet_please_input_correct_charge_amount">请输入有效的充值金额</string>
    <string name="bd_wallet_plugin_title">插件详情</string>
    <string name="bd_wallet_rece_time">到账时间</string>
    <string name="bd_wallet_received">到账成功</string>
    <string name="bd_wallet_refresh_loading">百度钱包安全加载…</string>
    <string name="bd_wallet_refresh_pull_down">下拉可以刷新</string>
    <string name="bd_wallet_refresh_release">松开后刷新</string>
    <string name="bd_wallet_refresh_time">最后更新时间：%1$s</string>
    <string name="bd_wallet_reload">重新加载</string>
    <string name="bd_wallet_save_yuan">节省%1$s元</string>
    <string name="bd_wallet_set_phone_pwd">设置手机支付密码</string>
    <string name="bd_wallet_sp_name">商户名称</string>
    <string name="bd_wallet_sp_no">商户单号</string>
    <string name="bd_wallet_tab_bill">我的交易</string>
    <string name="bd_wallet_to_sp">查看订单</string>
    <string name="bd_wallet_trans_cancel">交易关闭</string>
    <string name="bd_wallet_trans_detail">交易详情</string>
    <string name="bd_wallet_trans_no">交易单号</string>
    <string name="bd_wallet_trans_price">交易金额：</string>
    <string name="bd_wallet_trans_sucess">交易成功</string>
    <string name="bd_wallet_trans_time">交易时间</string>
    <string name="bd_wallet_trans_type">交易类型</string>
    <string name="bd_wallet_transfer_price">转账金额：</string>
    <string name="bd_wallet_transfer_to">转账给%1$s</string>
    <string name="bd_wallet_unbind_sms_code_has_sent">短信验证码已发送至 %1$s的手机，请收到后填写以验证身份，解绑后可重新绑定。</string>
    <string name="bd_wallet_unlogin_tip">登录我的钱包，查看余额</string>
    <string name="bd_wallet_update_again_btn">重新升级</string>
    <string name="bd_wallet_update_btn">立即升级</string>
    <string name="bd_wallet_update_ret_home_index_btn">返回首页</string>
    <string name="bd_wallet_withdraw">提现</string>
    <string name="bd_wallet_withdraw_btn_txt">立即提现</string>
    <string name="bd_wallet_withdraw_card_invalid">当前银行卡未认证，无法完成提现操作，请认证银行卡后使用</string>
    <string name="bd_wallet_withdraw_info_dialog_title">提现金额说明</string>
    <string name="bd_wallet_withdraw_no_card">当前暂无银行卡，请添加银行卡后使用</string>
    <string name="bd_wallet_withdraw_repair">认证银行卡</string>
    <string name="bd_wallet_withdraw_to_bank_tip">提现到卡</string>
    <string name="bd_wallet_withdraw_top_tip">百度钱包保障您的使用安全，请放心填写</string>
    <string name="bd_wallet_withdraw_userquota_info">您当日还可提现%1$s元</string>
    <string name="bd_wallet_withdraw_verify_btn_txt">确认提现</string>
    <string name="bd_wallet_yuan">%1$s元</string>
    <string name="bn_go">出发</string>
    <string name="bn_quit">否</string>
    <string name="bn_re_route">是(5)</string>
    <string name="bn_re_route_hint">当前位置离路线起点过远，是否以当前位置为起点重新计算路线？</string>
    <string name="board_format">"今日挖宝人数：%1$s
        今日挖出宝贝：%2$s"</string>
    <string name="bomb">炸弹可以砸向好友恶作剧哦~</string>
    <string name="build_num_tle">版本号:</string>
    <string name="bus_arrive_alert_set_success">设置成功，地图将在换乘站和终点站为您提醒</string>
    <string name="button_ok">OK</string>
    <string name="calibration">校准</string>
    <string name="calibration_move_ball">大幅倾斜屏幕转动圆球</string>
    <string name="calibration_move_ball_done">完成方向校准</string>
    <string name="cancel">取消</string>
    <string name="cancel_magic_find">取消挖宝</string>
    <string name="car_navi_failed_to_init_tts">语音播报模块初始化失败</string>
    <string name="carmode_searchresult_sort">排序</string>
    <string name="carmode_searchresult_sort_fail">当前没有定位成功，不可以使用按距离排序</string>
    <string name="category_choose_hint">请选择图片类别</string>
    <string name="check_SDcard">读取失败,请检查SD卡</string>
    <string name="check_update">检查更新</string>
</resources>