<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:app="http://schemas.android.com/apk/res/cn.tidylink.familiar"
                                        android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
            >
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
        <include layout="@layout/common_toolbar"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="1"
                      android:orientation="vertical"
                      android:id="@+id/main_content">
        </LinearLayout>

        <include layout="@layout/main_bottom"/>
    </LinearLayout>
    <FrameLayout android:layout_width="300dp" android:layout_height="match_parent" android:layout_gravity="left" android:background="#EEEEEE" android:focusable="true" android:focusableInTouchMode="true">
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
            <LinearLayout android:layout_width="match_parent" android:layout_height="128dp" android:background="@drawable/action_bar_bg" android:orientation="horizontal">
                <ImageView android:layout_marginLeft="10dp" android:layout_width="96dp" android:layout_height="96dp" android:src="@drawable/wallet_nfc_readcard_not_open_nfc" android:layout_gravity="center_vertical"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="用户名" android:textSize="22sp" android:textColor="#FEFEFF" android:layout_marginLeft="10dp" android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <RelativeLayout android:id="@+id/hset_rl_03" android:background="@drawable/worklog_set_listview_item_bg"
                            android:layout_height="50.0dip" style="@style/widthfull">
                <CheckBox android:id="@+id/hset_checkbox_muctip" android:focusable="false" android:clickable="false"
                          android:layout_width="20.0dip" android:layout_height="20.0dip"
                          android:layout_marginRight="@dimen/comm_margin_left" android:layout_alignParentRight="true"
                          android:layout_centerVertical="true" style="@style/jingoal_checkboxStyle"/>
                <ProgressBar android:id="@+id/hset_proccessbar_muctip" android:focusable="false"
                             android:visibility="gone" android:layout_marginRight="@dimen/comm_margin_left"
                             android:layout_alignParentRight="true" android:layout_centerVertical="true"
                             style="@style/progress_style"/>
                <TextView android:textSize="17.0dip"
                          android:textColor="@color/black"
                          android:id="@+id/hset_textview_muctip"
                          android:layout_width="fill_parent"
                          android:layout_marginLeft="@dimen/comm_margin_left"
                          android:text="@string/IDS_OTHER_00026"
                          android:singleLine="true"
                          android:layout_toLeftOf="@+id/hset_checkbox_muctip"
                          android:layout_alignParentLeft="true"
                          android:layout_centerVertical="true"
                          style="@style/wrapStyle"/>
            </RelativeLayout>
            <View android:background="@color/driverline_color" android:layout_width="fill_parent"
                  android:layout_height="0.5dip"/>
            <View android:background="@color/driverline_color" android:layout_width="fill_parent"
                  android:layout_height="0.5dip" android:layout_marginTop="@dimen/top_margin"/>
            <RelativeLayout android:id="@+id/hset_rl_01" android:background="@drawable/worklog_set_listview_item_bg"
                            android:layout_height="50.0dip" style="@style/widthfull">
                <CheckBox android:id="@+id/hset_checkbox_sound" android:focusable="false" android:clickable="false"
                          android:layout_width="20.0dip" android:layout_height="20.0dip"
                          android:layout_marginRight="@dimen/comm_margin_left" android:layout_alignParentRight="true"
                          android:layout_centerVertical="true" style="@style/jingoal_checkboxStyle"/>
                <TextView android:textSize="17.0dip"
                          android:textColor="@color/black"
                          android:id="@+id/hset_textview_sound"
                          android:layout_width="wrap_content"
                          android:layout_marginLeft="@dimen/comm_margin_left"
                          android:text="@string/IDS_OTHER_00024"
                          android:singleLine="true"
                          android:layout_alignParentLeft="true"
                          android:layout_centerVertical="true"
                          style="@style/wrapStyle"/>
            </RelativeLayout>
            <View android:background="@color/driverline_color" android:layout_width="fill_parent"
                  android:layout_height="0.5dip" android:layout_marginLeft="18.0dip"
                  android:layout_marginRight="10.0dip"/>
            <RelativeLayout android:id="@+id/hset_rl_02" android:background="@drawable/worklog_set_listview_item_bg"
                            android:layout_height="50.0dip" style="@style/widthfull">
                <CheckBox android:id="@+id/hset_checkbox_shake" android:focusable="false" android:clickable="false"
                          android:layout_width="20.0dip" android:layout_height="20.0dip"
                          android:layout_marginRight="@dimen/comm_margin_left" android:layout_alignParentRight="true"
                          android:layout_centerVertical="true" style="@style/jingoal_checkboxStyle"/>
                <TextView android:textSize="17.0dip"
                          android:textColor="@color/black"
                          android:id="@+id/hset_textview_shake"
                          android:layout_width="fill_parent"
                          android:layout_marginLeft="@dimen/comm_margin_left"
                          android:text="@string/IDS_OTHER_00025"
                          android:singleLine="true"
                          android:layout_toLeftOf="@+id/hset_checkbox_shake"
                          android:layout_alignParentLeft="true"
                          android:layout_centerVertical="true"
                          style="@style/wrapStyle"/>
            </RelativeLayout>
            <View android:background="@color/driverline_color" android:layout_width="fill_parent"
                  android:layout_height="0.5dip" android:layout_marginLeft="18.0dip"
                  android:layout_marginRight="10.0dip"/>
        </LinearLayout>
    </FrameLayout>
</android.support.v4.widget.DrawerLayout>

